test/classes/initializers/errors/errHandling/initWithTry.good
initWithTry.chpl:7: In initializer:
initWithTry.chpl:9: error: Error handling structures are not yet allowed in initializers
